--- a/www/assets/css/timeline.css
+++ b/www/assets/css/timeline.css
@@ -63,7 +63,15 @@
 }
 
 .timeline li {
-  padding: 2em 0;
+  padding: 1.4em 0;
+}
+
+.timeline-first {
+  padding-top: 3em;
+}
+
+.timeline-last {
+  padding-bottom: 3em;
 }
 
 .timeline .hexa{
@@ -281,6 +289,11 @@
     margin: 1em 0 0 0.75em;
     text-align: left;
   }
+
+  .timeline li {
+    padding: 0 0;
+    margin-top: -30px;
+  }
 }
 
 @media(min-width: 992px){
@@ -303,4 +316,10 @@
     float: right;
     text-align: left;
   }
+
+  .timeline li {
+    padding: 0 0;
+    margin-top: -30px;
+  }
+  
 }
