--- a/www/assets/css/index.css
+++ b/www/assets/css/index.css
@@ -1,4 +1,32 @@
+.images-logo{
+  padding: 10px 32% 0px;
+  cursor: pointer;
+}
 
+.images-client{
+  padding: 10px 20% 0px;
+  cursor: pointer;
+}
+
+.images-text{
+  margin-top: 5px;
+  margin-left: 8px;
+  margin-right: 8px;
+  text-align: center;
+  font-size: 14px;
+}
+
+@media(min-width: 768px){
+  .images-logo{
+    padding: 10px 6% 0px;
+  }
+  .images-client{
+    padding: 10px 2% 0px;
+  }
+}
+
+
+/* Timeline */
 .hexa{
   border: 0px;
   float: left;
@@ -322,4 +350,69 @@
     margin-top: -30px;
   }
   
+}
+
+
+/* callout */
+.callout {
+  padding: 5px;
+  margin: 5px 0;
+  border: 1px solid #eee;
+  border-left-width: 5px;
+  border-radius: 3px;
+}
+.callout h4 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.callout p:last-child {
+  margin-bottom: 0;
+}
+.callout code {
+  border-radius: 3px;
+}
+.callout + .bs-callout {
+  margin-top: -5px;
+}
+.callout-default {
+  border-left-color: #777;
+}
+.callout-default h4 {
+  color: #777;
+}
+.callout-primary {
+  border-left-color: #428bca;
+}
+.callout-primary h4 {
+  color: #428bca;
+}
+.callout-success {
+  border-left-color: #5cb85c;
+}
+.callout-success h4 {
+  color: #5cb85c;
+}
+.callout-danger {
+  border-left-color: #d9534f;
+}
+.callout-danger h4 {
+  color: #d9534f;
+}
+.callout-warning {
+  border-left-color: #f0ad4e;
+}
+.callout-warning h4 {
+  color: #f0ad4e;
+}
+.callout-info {
+  border-left-color: #5bc0de;
+}
+.callout-info h4 {
+  color: #5bc0de;
+}
+.callout-bdc {
+  border-left-color: #29527a;
+}
+.callout-bdc h4 {
+  color: #29527a;
 }
